--- a/woapplication-archetype/pom.xml
+++ b/woapplication-archetype/pom.xml
@@ -9,4 +9,5 @@
 	<artifactId>woapplication-archetype</artifactId>
 	<packaging>maven-archetype</packaging>
 	<name>WebObjects Application Archetype</name>
+	<description>WebObjects Application Project Archetype.</description>
 </project>
