--- a/woapplication-servlet-archetype/src/main/resources/archetype-resources/.project
+++ b/woapplication-servlet-archetype/src/main/resources/archetype-resources/.project
@@ -15,6 +15,7 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.maven.ide.eclipse.maven2Nature</nature>
 		<nature>
 			org.objectstyle.wolips.incrementalapplicationnature
 		</nature>
